--- a/Projeto-Greate-People-Enterprise/Front-end/app-empresa/src/app/components/painel-administrativo/painel-administrativo/painel-administrativo.component.html
+++ b/Projeto-Greate-People-Enterprise/Front-end/app-empresa/src/app/components/painel-administrativo/painel-administrativo/painel-administrativo.component.html
@@ -2,10 +2,17 @@
     <h1 class="display-6 margem-superior mb-3">Boas vindas, administrador ao painel adminstrativo de empresas</h1> 
     <h2 class="margem-superior mb-3">Listagem de empresas</h2>
 
-    <div class="mb-3">
-        <label class="form-label" for="">Digite o nome da empresa:</label>
-        <input type="text" class="form-control" #busca (keyup)="0"/>
-    </div>
+    <div class="d-flex mb-3">
+        <div class="me-auto p-2">
+            <input class="form-control me-2" size="50" type="search" placeholder="Digite o nome da empresa" aria-label="Search" #busca (keyup)="0">
+        </div>
+        <div class="p-2">   
+            <select class="form-select p-2" name="uf" id="uf" #uf (change)="0">
+                <option value="">Todos os estados</option>
+                <option *ngFor="let e of estados" value="{{e.sigla}}">{{e.nome}} - {{e.sigla}}</option>
+            </select>
+        </div>
+      </div>
 
     <table class="table table-striped">
         <thead>
@@ -22,7 +29,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let e of empresas">
+            <tr *ngFor="let e of empresas | filtroempresa:busca.value:uf.value">
                 <td>{{e.id}}</td>
                 <td>{{e.nome}}</td>
                 <td>{{e.razaoSocial}}</td>
