--- a/Projeto-Greate-People-Enterprise/Front-end/app-empresa/src/app/components/menu-geral/menu-geral.component.html
+++ b/Projeto-Greate-People-Enterprise/Front-end/app-empresa/src/app/components/menu-geral/menu-geral.component.html
@@ -1,6 +1,8 @@
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Great People</a>
+      <a routerLink="/home">
+        <img class=logo-greatpeople src="assets/images/greatpeople.png" alt="Logo Great People" />
+      </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -17,10 +19,10 @@
               Para Empresa
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" routerLink="/home">RH Empresas</a></li>
+              <li><a class="dropdown-item" routerLink="/home">Página Principal</a></li>
               <li><a class="dropdown-item" routerLink="/login">Login Empresa</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" routerLink="/cadastro">Cadastre-se</a></li>
+              <li><a class="dropdown-item" href="/cadastro">Cadastre-se</a></li>
             </ul>
           </li>
           <li class="nav-item dropdown">
@@ -28,10 +30,10 @@
               Para Candidato
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Action</a></li>
-              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Vagas</a></li>
+              <li><a class="dropdown-item" href="#">Teste vocacional</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#">Something else here</a></li>
+              <li><a class="dropdown-item" href="#">Cursos profissionalizantes</a></li>
             </ul>
           </li>
         </ul>
