--- a/Projeto-Greate-People-Enterprise/Front-end/app-empresa/src/app/components/cadastro/cadastro.component.css
+++ b/Projeto-Greate-People-Enterprise/Front-end/app-empresa/src/app/components/cadastro/cadastro.component.css
@@ -56,8 +56,7 @@
 }
 
 .caixa-texto{
-    background-color: #FEFAF6;
-    color: #000;
+    background-color: #FEFAF6;;
 }
 
 .espacamento-externo-botao{
@@ -98,7 +97,3 @@
     top: 0px;
 }
 
-span{
-    color: rgb(192, 0, 0);
-    font-size: 16px;
-}
