--- a/Projeto-Greate-People-Enterprise/Front-end/app-empresa/src/app/components/login/login.component.css
+++ b/Projeto-Greate-People-Enterprise/Front-end/app-empresa/src/app/components/login/login.component.css
@@ -1,82 +1,165 @@
-.imagem{
-}
+@import url('https://fonts.googleapis.com/css2?family=Arimo:wght@700&family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-.area-login{
-    background-color: #127369; 
-}
-
-.texto-cabecalho{
-    color: #FEFAF6;
-
-}
-
-.texto-secundario{
-    color: #FEFAF6;
-    text-align: center;
-
-}
-
-.caixa-input{
-    font-family: 'Nanum Gothic', sans-serif;
-    width: 70px;
-
-}
-
-.botao{
-
-    background-color:#5D8A66;
-    border: solid 1px;
-    color: #FEFAF6;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-    font-weight: bold;
-    font-size: 18px;
-    max-width: 300px;
-    padding-top: 15px;
-    padding-bottom: 15px;
-    padding-left: 30px;
-    padding-right: 30px;
-    transition: transform 100ms linear;
 }
 
-.botao:hover{
-    transform: scale(1.08)
-}
-
-.alinhamento-botao{
+body {
+    width: 100%;
+    height: 100vh;
     display: flex;
     justify-content: center;
+    align-items: center;
+    background-color: #21445B;
 }
 
+.container {
+    width: 50%;;
+    height: 80vh;
+    display: flex;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, .900);
+}
 
+.form-image {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #5D8A66;
+}
 
-.textos{
+.form-image img {
+    width: 100%;
+}
+
+.form {
+    width: 50%;;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: #fff;
+    padding: 3rem;
+}
+
+.input-group {
+    display: flex;
+    flex-direction: column;
+    padding-bottom: 10px;
 
 }
 
+.input-box {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 1.1rem;
+}
 
-/*.area-login{
-    color: #FEFAF6;
-    background-color: #549D7D;
-    font-family: 'Nanum Gothic', sans-serif;
-    font-size: 35;
-    padding-top: 50px; 
-    padding-bottom: 8px;
+.input-box input {
+    margin: 0.6rem 0;
+    padding: 0.8rem 1.2rem;
+    border: none;
+    border-radius: 10px;
+    box-shadow: 1px 1px 6px #0000001c;
+}
 
+.input-box input:hover {
+    background-color: #eeeeee75;
+}
+
+.input-box input:focus-visible {
+    outline: 1px solid #D96704;
+}
+
+.input-box label {
+    font-size: 15px;
+    font-weight: 600;
+    color: #000000c0;
+}
+
+input-box input::placeholder {
+    color: #000000be;
 }
 
 .botao-login{
-    color: #FEFAF6;
-    background-color:#127369;
-    border: solid 1px;
-    max-width: 200px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    font-weight: bold;
+    display: flex;
+    align-items: center;
 }
 
+.botao-login button{
+    width: 100%;
+    margin-bottom: 1.5rem;
+    border: none;
+    background-color: #5D8A66;
+    padding: 0.62rem;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
+.botao-login button:hover{
+    background-color: #7DA184;
+}
 
-.imagem-cabecalho{
+.botao-login button a {
+    text-decoration: none;
+    font-weight: 500;
+    color: #fff;
+}
+
+.form-header{
+    margin-bottom: 1.5rem;
+    display: flex;
+    padding-top: 10px;
+
+}
+.form-footer {
+    margin-bottom: 5px;
+    display: flex;
+    border-top: 1px solid #a6b4bd;
+
+    padding-top: 15px;
+}
+
+.text-footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+}
+
+.link-cadastro a {
+    text-decoration: none;
+    font-size: 20px;
+    color: #D96704;
+    font-weight: bold;
     display: flex;
     justify-content: center;
-}*/
+}
+
+@media screen and (max-width: 1330px) {
+    .form-image {
+        display: none;
+    }
+    .container { 
+        width: 50%;
+    }
+    .form {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1064px){
+    .container {
+        width: 90%;
+        height: auto;
+    }
+    .input-group{
+        max-width: 100%;
+    }
+}
+
