Projeto 30/01 - Conserta listagem de vagas por empresa. Falta realizar o css do componentes restantes.

--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/home/home-empresa/home-empresa.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/home/home-empresa/home-empresa.component.html
@@ -53,7 +53,7 @@
 </div>
 
 <div class="text-center cor-clientes">
-  <p class="titulo-clientes">Clientes que confiam na Great People Interprise</p>
+  <p class="titulo-clientes">Clientes que confiam na Great People Company</p>
   <div class="row area-logo">
     <div class="col">
       <img src="assets/images/brainchat.png" class="logo-clientes" alt="Logo cliente Brain Chat">
@@ -122,12 +122,12 @@
 
           <div class="col-4 alinhamento-imagem">
               <img src="assets/images/instagram.png" class="imagem-instagram" alt="Instagram" />
-              <p>@greatpeopleinterprise</p>
+              <p>@greatpeoplecompany</p>
           </div>
 
           <div class="col-4 alinhamento-imagem">
             <img src="assets/images/linkedin.png" class="imagem-linkedin" alt="LinkedIn" />
-            <p>linkedin/greatpeopleinterprise</p>
+            <p>linkedin/greatpeoplecompany</p>
           </div>
         </div>
       </div>
