--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/exclusao/exclusao.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/exclusao/exclusao.component.html
@@ -1,6 +1,10 @@
-<div class="container">
-        <h1 class="text-danger">Deseja excluir sua conta?</h1>
-        <p class="text-uppercase">Empresa: {{empresa.nome}}</p>
-        <button class="btn btn-secondary" (click)="voltar()">Não, voltar para o painel</button> | 
-        <button class="btn btn-danger" (click)="excluir(id)">Sim, excluir minha conta</button>
+<div class="container bloco-principal">
+        <div class="bloco-confirmacao">
+                <h1 class="text-danger">Deseja excluir sua conta?</h1>
+                <p class="text-uppercase">Empresa: {{empresa.nome}}</p>
+                <form>
+                        <button class="btn btn-secondary" (click)="voltar()">Não, voltar para o painel</button>
+                        <button class="btn btn-danger" (click)="excluir(id)">Sim, excluir minha conta</button>
+                </form>
+        </div>
 </div>
