--- a/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/login/login.component.html
+++ b/Projeto-Greate-People-Company/Front-end/app-empresa/src/app/components/login/login.component.html
@@ -37,6 +37,9 @@
         <div class="botao-login">
           <button (click)="validar(user)"><a>Entrar</a></button>
         </div>
+
+        <div class="erro" id="mensagem-erro">{{erro}}</div>
+        
         <div class="form-footer">
           <div class="text-footer">
             <h5>Não tem uma conta ainda?</h5>
@@ -45,7 +48,6 @@
         <div class="link-cadastro">
           <a routerLink="/cadastro">Cadastre-se</a>
         </div>
-        <div *ngIf="erro" class="alert alert-danger">{{erro}}</div>
       </form>
     </div>
   </div>
